# EFREI-Data-Structure

./: C_Programming_Notes.md  README.md
Implementation/: Btree.c  Btree.h  CMakeLists.txt  Queue.c  Queue.h  Slist.c  main.c
Implementation/Lists/Dlist/: Dlist.c  Dlist.h
Implementation/Lists/Slist/: Slist.c  Slist.h
Implementation/Lists/Slist_tail/: Slist_tail.c  Slist_tail.h
Implementation/Queue/: Queue.c  Queue.h
Implementation/Stack/: Stack.c  Stack.h
Implementation/Trees/AVL/: AVL.c  AVL.h
Implementation/Trees/Btree/: Btree.c  Btree.h
LinkedList/: Slist.c  main.c
